# GEO1004-assignment3

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: structs.h
cpp/src/: main.cpp
data/: IfcOpenHouse_IFC2x3_simplified.mtl  OpenHouse2x3-keep-relevant-only.mtl  WellnessCenterSama_simplified.mtl  mybuilding.city.json
report/typst/: content.typ  report.typ
